--- a/Goldlight.HttpClientTestSupport/Goldlight.HttpClientTestSupport.csproj
+++ b/Goldlight.HttpClientTestSupport/Goldlight.HttpClientTestSupport.csproj
@@ -1,14 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>Peter O'Hanlon</Authors>
     <Description>A rich-featurd HttpMessageHandler implementation suitable for use in HttpClient tests. This implementation provides the ability to populate the expected response with items such as the Headers and Version information.</Description>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <Copyright>Peter O'Hanlon</Copyright>
+    <RepositoryUrl>https://github.com/ohanlon/Goldlight.HttpClientTestSupport</RepositoryUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="System.Text.Json" Version="5.0.2" />
   </ItemGroup>
-
 </Project>
