--- a/Goldlight.HttpClientTestSupport/Goldlight.HttpClientTestSupport.csproj
+++ b/Goldlight.HttpClientTestSupport/Goldlight.HttpClientTestSupport.csproj
@@ -9,6 +9,10 @@
     <Copyright>Peter O'Hanlon</Copyright>
     <RepositoryUrl>https://github.com/ohanlon/Goldlight.HttpClientTestSupport</RepositoryUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <SignAssembly>false</SignAssembly>
+    <AssemblyVersion>1.1.0.0</AssemblyVersion>
+    <FileVersion>1.1.0.0</FileVersion>
+    <PackageVersion>1.1.0.0</PackageVersion>
   </PropertyGroup>
 
   <ItemGroup>
