A similar to preActions, there is preAssertions, only differ to use Func<HttpRequestMessage, bool>. Using bool as a return value otherwise we would need to somehow handle xunit/nunit/mstest/etc. assertion exceptions which require a dependency on those packages. Hence using custom exception type. The catch all and return 500 block swallows the exceptions, code now filters out the the custom exception type, so it is left unhandled and the test case can become red when that is thrown.

--- a/Goldlight.HttpClientTestSupport/Goldlight.HttpClientTestSupport.csproj
+++ b/Goldlight.HttpClientTestSupport/Goldlight.HttpClientTestSupport.csproj
@@ -13,6 +13,7 @@
     <AssemblyVersion>1.1.0.0</AssemblyVersion>
     <FileVersion>1.1.0.0</FileVersion>
     <PackageVersion>1.1.0.0</PackageVersion>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
