--- a/Goldlight.HttpClientTestSupport/Goldlight.HttpClientTestSupport.csproj
+++ b/Goldlight.HttpClientTestSupport/Goldlight.HttpClientTestSupport.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
+		<TargetFramework>net6.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>Peter O'Hanlon</Authors>
     <Description>A rich-featured HttpMessageHandler implementation suitable for use in HttpClient tests. This implementation provides the ability to populate the expected response with items such as the Headers and Version information.</Description>
@@ -10,9 +10,9 @@
     <RepositoryUrl>https://github.com/ohanlon/Goldlight.HttpClientTestSupport</RepositoryUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <SignAssembly>false</SignAssembly>
-    <AssemblyVersion>1.1.0.0</AssemblyVersion>
-    <FileVersion>1.1.0.0</FileVersion>
-    <PackageVersion>1.1.0.0</PackageVersion>
+    <AssemblyVersion>1.3.0.0</AssemblyVersion>
+    <FileVersion>1.3.0.0</FileVersion>
+    <PackageVersion>1.3.0.0</PackageVersion>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
